--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body{
     }
 }
 .greetings > span:nth-child(2){
-    animation-delay: .2s ;
+    animation-delay: .3s ;
 }
 .greetings > span:nth-child(3){
     animation-delay: .4s ;
@@ -39,7 +39,13 @@ body{
     animation-delay: .6s;
 }
 .greetings > span:nth-child(5){
-    animation-delay: .8s;
+    animation-delay: 8s;
+}
+.greetings > span:nth-child(6){
+    animation-delay: 1s;
+}
+.greetings > span:nth-child(7){
+    animation-delay: 1.2s;
 }
 
 .description{
